<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="btn_popular_movies">POPULAR MOVIES</string>
    <string name="btn_stock_hawk">STOCK HAWK</string>
    <string name="btn_build_it_better">BUILD IT BETTER</string>
    <string name="btn_make_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="btn_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="btn_capstone_my_app">CAPSTONE MY OWN APP</string>
    <string name="textview_title">My Nanodegree Apps</string>
    <string name="open_app">This button will launch</string>
</resources>
