<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/portfolioBackground"
    tools:context="com.example.bkambo.myappportfolio.MainActivity">

    <TextView
        android:text="@string/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/portfolioTitle"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="4dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textStyle="normal|bold"/>
    <Button
        android:text="@string/btn_popular_movies"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPopularMovies"
        android:background="@color/buttonBackground"
        android:layout_width="250dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:text="@string/btn_stock_hawk"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStockHawk"
        android:background="@color/buttonBackground"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" />

    <Button
        android:text="@string/btn_build_it_better"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuildItBetter"
        android:background="@color/buttonBackground"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" />

    <Button
        android:text="@string/btn_make_app_material"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMakeAppMaterial"
        android:background="@color/buttonBackground"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" />

    <Button
        android:text="@string/btn_go_ubiquitous"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoUbiquitous"
        android:background="@color/buttonBackground"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"/>

    <Button
        android:text="@string/btn_capstone_my_app"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCapstone"
        android:background="@color/buttonCapstoneBackground"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textStyle="normal|bold" />
</LinearLayout>
</ScrollView>